2004-01-29  Not Zed  <NotZed@Ximian.com>

	* camel-object.c (cobject_state_write): output scan->name and
	scan->value for writing metadata, rather than meta->name/value
	which just duplicates the last entry, related to #53195.

	* camel-url.c (camel_url_free): zero out passwd/user/host before
	freeing them.

2004-01-28  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/local/camel-mbox-store.c (rename_folder): Make sure
	the new dir path exists before trying to rename files to avoid
	ENOENT errors. Also save errno when we encounter errors so that we
	can report the true error later rather than an error we may get
	while reverting changes. Also, it is OK if the ibex files don't
	exist, so check for that errno case.

2004-01-28  Sivaih Nallagatla <snallagatla@novell.com>

	* providers/groupwise/camel-gw-listener.c (account_changed)
	(modify_esources) : add port and /soap parts to relative uri while 
	updating it when account changed

2004-01-27  Radek Doulik  <rodo@ximian.com>

	* providers/imap/camel-imap-folder.c (camel_imap_folder_new): set
	CAMEL_FOLDER_SUPRESS_JUNK_TEST flag
	(imap_update_summary): update CAMEL_FOLDER_SUPRESS_JUNK_TEST flag

	* camel-folder.c (folder_changed): use
	CAMEL_FOLDER_SUPRESS_JUNK_TEST flag instead of check_junk_for_imap

	* camel-folder.h (CAMEL_FOLDER_SUPRESS_JUNK_TEST): added new flag

2004-01-27  Not Zed  <NotZed@Ximian.com>

	** See bug #53373.

	* camel-store.c (camel_store_rename_folder): use object_bag_rekey
	to rename the object.  object_bag use was broken.

	* camel-object.c (camel_object_bag_rekey): new api to atomically re-key 

2004-01-23  Radek Doulik  <rodo@ximian.com>

	* camel-folder.c (folder_changed): use check_junk_for_imap flag

	* camel-session.c: add check_junk_for_imap flag

2004-01-23  Not Zed  <NotZed@Ximian.com>

	* providers/imap/camel-imap-folder.c (IMAP_SMALL_BODY_SIZE):
	removed the meaningless fixme, a butt-retrieved-number is as good
	as any in this case.